<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.h2soft.pedram.rent.AddBuildingActivity">

        <TextView
            android:id="@+id/buildingNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/building_name" />

        <EditText
            android:id="@+id/buildingNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buildingNameTextView"
            android:layout_alignBottom="@+id/buildingNameTextView"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/buildingNameTextView"
            android:hint="@string/e_g_yellow_one"
            android:inputType="text"
            android:maxLines="1" />

        <Button
            android:id="@+id/setImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buildingNameTextView"
            android:layout_marginTop="80dp"
            android:text="@string/browse" />

        <ImageView
            android:id="@+id/houseImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buildingNameTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/set_an_image_of_your_house"
            android:cropToPadding="true"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/house_vector" />

        <CheckBox
            android:id="@+id/parkingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/houseImageView"
            android:text="@string/this_building_has_a_parking" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/parkingCheckBox"
            android:layout_marginTop="40dp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/cityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cityTextView"
            android:layout_toEndOf="@+id/plateNumberTextView"
            android:hint="@string/london"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cityTextView"
            android:layout_marginTop="17dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/addressTextView"
            android:layout_below="@id/cityEditText"
            android:layout_toEndOf="@id/plateNumberTextView"
            android:hint="@string/enter_full_address_of_building"
            android:lines="3"
            android:maxLines="3" />

        <TextView
            android:id="@+id/plateNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/addressEditText"
            android:layout_marginTop="18dp"
            android:text="@string/plate_number" />

        <EditText
            android:id="@+id/plateNumberEditText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_425"
            android:inputType="number"
            android:maxLines="1"
            android:layout_alignBottom="@+id/plateNumberTextView"
            android:layout_toEndOf="@+id/plateNumberTextView"
            android:layout_marginStart="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_below="@+id/plateNumberEditText"
            android:layout_centerHorizontal="true"
            android:onClick="onClickSubmitButton"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit"/>
    </RelativeLayout>
</ScrollView>